# FOC-control

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml
dashboard/: .gitignore  CMakeLists.txt  conanfile.py
dashboard/src/: broadcast.hpp  foc_dash.hpp  gui.cpp  gui.hpp  io.hpp  main.cpp  resource.hpp  state.cpp  state.hpp
dashboard/test_package/: conanfile.py
docs/: Makefile  foc.tex  references.bib  structure.tex
include/: angle.hpp  filters.hpp  foc.hpp  metaprogramming.hpp  peripherals.hpp  utility.hpp  vectors.hpp
sim/: motor.hpp
sim/filt_gen/: pyproject.toml
sim/filters/: filtercomp.py  main.py
src/: adc_main.cpp  example_motor.cpp  example_motor.hpp  main.cpp  mock_peripherals.hpp  peripherals.cpp  resource_list.hpp
